--- a/Web_Scrapping.ipynb
+++ b/Web_Scrapping.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This is the first part of the project on comparing the renting prices of the apartments in Berlin and Hamburg using immpobilienscout24. In this part I scrap the data from several pages of the website using selenium-package. One of the advantages of selenium for this particular project was the ability to manually go through CAPTCHA, as they included choosing the objects in the correct order.\n",
     "\n",
-    "The project is divided as follows: first, necessary packages are installed. Then the data is scrapped for Berlin apartments and saved in the txt-file. Next, the data is scrapped for the apartments in Hamburg and saved in the txt-file. "
+    "The project is divided as follows: first, necessary packages are installed. Then the data is scraped for Berlin apartments and saved in the txt-file. Next, the data is scraped for the apartments in Hamburg and saved in the txt-file. "
    ]
   },
   {
